真 阿笨websockte，exe 100M以上git限制了，在云盘https://pan.baidu.com/s/1r5vlrD8V7iw11a3cMD6z7g 1.IIS的安装AspNetCoreModule模块，运行时环境https://www.cnblogs.com/weihengblogs/p/9713005.html https://aka.ms/dotnetcore-2-windowshosting

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 audioVideo/unpackage/dist/
 ABenNetCore.WebSocket.AppMsgPush/ABenNET.SuperWebSocket.AppClient/bin/Debug/
+ABenNetCore.WebSocket.AppMsgPush/DotNetCore.2.0.8-WindowsHosting.exe
